@@ -2,7 +2,8 @@
 <% end %>
 
 <p><%= link_to 'Tipos de apartamentos', :controller => "tipos_apartamentos", :action => "index" %></p>
-<br><br>
+<p><%= link_to 'Registrar', :controller => "hospedes", :action => "new" %></p>
+<br>
 <p><%= link_to 'Login', :controller => "cliente", :action => "login" %></p>
 
 
